Sidebar color changed

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -8,7 +8,7 @@
     z-index: 4;
 
     .sidebar__content {
-        background: linear-gradient(180deg, #381D59 0%, #AB70CA 100%);
+        background: linear-gradient(180deg, #003049 0%, #780000 100%);
         min-height: 100%;
         max-width: 300px;
         min-width: 300px;
