--- a/src/Properties.scss
+++ b/src/Properties.scss
@@ -23,7 +23,7 @@
     cursor: pointer;
     color: #ffffff;
     text-align: center;
-    background-color: $mhp-btn-normal-purple;
+    background-color: $mhp-btn-normal-blue;
     border: 0;
     border-radius: 7px;
 }
