--- a/src/index.css
+++ b/src/index.css
@@ -8,13 +8,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #FBF2F4;
+  background-color: #FFF8EA;
   height: 100%;
   
 }
 
 ::selection {
-  background-color: #aa66cc;
+  background-color: #003049;
   color: #ffffff;
 }
 
