--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -1,9 +1,9 @@
 // COLORS
 
-$mhp-btn-normal-purple:#AB70CA;
-$mhp-btn-hover-purple:#AA5BD3;
-$mhp-bg-pink:#FBF2F4;
-$mhp-dark-purple:#381D59;
+$mhp-btn-normal-blue:#003049;
+$mhp-btn-hover-blue:#025078;
+$mhp-bg-cream:#FFF8EA;
+$mhp-dark-blue:#003049;
 $mhp-navbar-active-page-orange: #FA8A8A;
 $mhp-orange:#FA8A8A;
 $mhp-light-gery:#CDCDCD;
@@ -11,5 +11,5 @@ $mhp-dark-grey:#898989;
 $mhp-inactive-input-grey:#898989;
 $mhp-active-input-grey: #4D4D4D;
 $mhp-inactive-mobile-input-grey:#C4C4C4;
-$mhp-btn-hover-purple-slots:#aa70ca21;
+$mhp-btn-hover-blue-slots:#0a4766;
 $mhp-btn-hover-orange-slots:#fa8a8a21;
