--- a/src/components/WorkExpDialog/WorkExpDialog.scss
+++ b/src/components/WorkExpDialog/WorkExpDialog.scss
@@ -62,7 +62,7 @@
           @include font-poppin;
           &:focus{
             outline: none;
-            border-color: $mhp-btn-normal-purple;
+            border-color: $mhp-btn-normal-blue;
           }
         }
 
@@ -72,7 +72,7 @@
           color:#727272;
 
           &:hover{
-            color: $mhp-btn-normal-purple;
+            color: $mhp-btn-normal-blue;
           }
         }
 
@@ -94,16 +94,16 @@
           }
 
           &:focus-within{
-            border-color: $mhp-btn-normal-purple;
+            border-color: $mhp-btn-normal-blue;
             .picker-icon{
-              color: $mhp-btn-normal-purple;
+              color: $mhp-btn-normal-blue;
             }
           }
         }
 
         &:focus-within{
           label{
-            color: $mhp-btn-normal-purple;
+            color: $mhp-btn-normal-blue;
           }
         }
       }
@@ -157,7 +157,7 @@
     //   z-index: 2;
     // }
     .e-calendar .e-content td.e-focused-date.e-today span.e-day {
-      background-color: $mhp-btn-normal-purple;
+      background-color: $mhp-btn-normal-blue;
       color: #fff;
     }
     .e-calendar .e-btn.e-today.e-flat.e-primary, .e-calendar .e-css.e-btn.e-today.e-flat.e-primary {
