--- a/src/pages/AppointmentsPage/AppointmentsPage.scss
+++ b/src/pages/AppointmentsPage/AppointmentsPage.scss
@@ -21,7 +21,7 @@
         font-size: 35px;
         text-align: left;
         font-weight: bold;
-        color: #381D59;
+        color: #0E2B41;
     }
     .appointments__navbar {
         display: flex;
@@ -38,14 +38,14 @@
             span {
                 padding: 5px 2px;
                 margin: 5px 0;
-                color: #381D59;
+                color: #0E2B41;
             }
             span:hover {
                 cursor: pointer;
-                border-bottom: 3px solid #381D59;
+                border-bottom: 3px solid #0E2B41;
             }
             span.active {
-                border-bottom: 3px solid #381D59;
+                border-bottom: 3px solid #0E2B41;
             }
         }
     }
