Updated color scheme

--- a/src/components/ScheduleHeader/ScheduleHeader.scss
+++ b/src/components/ScheduleHeader/ScheduleHeader.scss
@@ -23,7 +23,7 @@
             justify-content: center;
             align-items: center;
             background: #FFFFFF;
-            border: 1px solid #AB70CA;
+            border: 1px solid #0E2B41;
             box-sizing: border-box;
             border-radius: 16px;
             padding: 10px 20px;
@@ -49,11 +49,11 @@
                 }
 
                 .regular__schedule {
-                    background: #AB70CA;
+                    background: #0E2B41;
                 }
 
                 .booked__schedule {
-                    background: #AB70CA;
+                    background: #0E2B41;
                     align-items: center;
                     justify-content: center;
                     div {
