--- a/src/components/WorkExp/WorkExp.scss
+++ b/src/components/WorkExp/WorkExp.scss
@@ -1,5 +1,5 @@
 .steps {
-  color: #381D59;
+  color: #0E2B41;
   margin-top: 2rem;
   margin-bottom: 2rem;
 
@@ -32,7 +32,7 @@
   }
 
   .empTypP {
-    color: #381D59;
+    color: #0E2B41;
     margin-left: 50px;
     z-index: -100;
     float: left;
