--- a/src/components/Appointments/Appointments.scss
+++ b/src/components/Appointments/Appointments.scss
@@ -19,7 +19,7 @@
 
     h6 {
       font-family: 'poppins';
-      color: #AB70CA;
+      color: #0E2B41;
       font-size: 12px;
       margin: 0;
       font-weight: 400;
@@ -66,7 +66,7 @@
           }
       }
       p{
-        color: #AB70CA;
+        color: #0E2B41;
         font-size: 12px;
         font-weight: 600;
         text-decoration: underline;
@@ -75,7 +75,7 @@
       }
     }
     button{
-        background: #AB70CA;
+        background: #0E2B41;
         border: none;
         padding: 10px;
         border-radius: 7px;
@@ -99,7 +99,7 @@
       .addToCalendar {
         background-color: transparent;
         border: none;
-        color: #AB70CA;
+        color: #0E2B41;
         cursor: pointer;
       }
     }
